# spinwheel

./: .bazelrc  .dockerignore  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  README.md  security.md
.github/workflows/: deploy-frontend.yml  frontend.yml
backend/: BUILD.bazel  README.md  go.mod
backend/cmd/server/: BUILD.bazel  main.go
backend/internal/handler/: BUILD.bazel  wheel.go
backend/internal/middleware/: BUILD.bazel  ratelimit.go  user.go
backend/internal/repository/: BUILD.bazel  wheel.go
backend/internal/service/: BUILD.bazel  wheel.go
backend/pkg/logger/: BUILD.bazel  logger.go
backend/pkg/models/: BUILD.bazel  wheel.go
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/.github/workflows/: deploy-frontend.yml
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddItemForm.tsx  Item.tsx  ItemList.tsx  Navbar.tsx  Playground.tsx  Wheel.tsx  index.ts
frontend/src/config/: api.ts
idl/proto/google/api/: BUILD.bazel  annotations.proto  http.proto
idl/proto/spinwheel/v1/: BUILD.bazel  service.proto  wheel.proto
instructions/: backend-scaffold.md  backend-update-and-next-steps.md  copilot-instructions.md
tools/: BUILD.bazel
