load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "spinwheel/backend/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/internal/handler",
        "//backend/internal/middleware",
        "//backend/internal/repository",
        "//backend/internal/service",
        "//backend/pkg/logger",
        "//idl/proto/spinwheel/v1:spinwheel",
        "@org_golang_google_grpc//:grpc",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//reflection",
        "@org_uber_go_zap//:zap",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
